# HelloCV

./: .gitignore  readme.md  test  test.cpp
Crypto/: CMakeLists.txt
Crypto/include/: Crypto_tool.h  console_tool.h
Crypto/src/: main  main.cpp
Crypto_subtest/: CMakeLists.txt
Crypto_subtest/TOOL/: CMakeLists.txt
Crypto_subtest/TOOL/include/: Crypto_tool.h
Crypto_subtest/TOOL/src/: Crypto_tool.cpp
Crypto_subtest/src/: main.cpp
notes/: links.txt
notes/md_files/: 1.md
opencv/traffic_light/: s6.cpp
ros2/my_ws/src/bot_description/: CMakeLists.txt  package.xml
ros2/my_ws/src/bot_description/config/: display_robot_model.rviz
ros2/my_ws/src/bot_description/launch/: display_robot.launch.py
ros2/my_ws/src/bot_description/urdf/: bot.urdf  ffff.urdf  first_bot.xacro
ros2/my_ws/src/bot_description/urdf/mybot/: base.urdf.xacro  bot_result.urdf  mybot.urdf.xacro
ros2/my_ws/src/bot_description/urdf/mybot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
ros2/my_ws/src/cpp_pkg_02/: CMakeLists.txt  package.xml
ros2/my_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
ros2/my_ws/src/demo_cpp_pkg/src/: demo_node.cpp  demo_publisher.cpp  demo_service_client.cpp  demo_service_server.cpp  demo_subscriber.cpp  demo_threads.cpp
ros2/my_ws/src/demo_cpp_tf/: CMakeLists.txt  package.xml
ros2/my_ws/src/demo_cpp_tf/src/: static_tf_broadcaster.cpp  tf_broadcaster.cpp  tf_listener.cpp
ros2/my_ws/src/demo_use_my_interface/: CMakeLists.txt  package.xml
ros2/my_ws/src/demo_use_my_interface/launch/: launch_test.launch.py
ros2/my_ws/src/demo_use_my_interface/src/: client_echo.cpp  server_echo.cpp
ros2/my_ws/src/example_interfaces_my/: CMakeLists.txt  package.xml
ros2/my_ws/src/example_interfaces_my/srv/: Echo.srv
ros2/world/: custom_room.world
ros2/world/room_test/: model.sdf
